2013-02-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r144129.
        http://trac.webkit.org/changeset/144129
        https://bugs.webkit.org/show_bug.cgi?id=110947

        Breaks compilation on chromium mac and win (Requested by
        vsevik on #webkit).

        * chromium/public/WebLayerTreeViewClient.h:
        (WebLayerTreeViewClient):
        (WebKit::WebLayerTreeViewClient::willBeginFrame):
        (WebKit::WebLayerTreeViewClient::didBeginFrame):

2013-02-26  James Robinson  <jamesr@chromium.org>

        [chromium] Remove WebLayerTreeViewClient::(will|did)BeginFrame
        https://bugs.webkit.org/show_bug.cgi?id=110928

        Reviewed by Adrienne Walker.

        * chromium/public/WebLayerTreeViewClient.h:

2013-02-26  James Robinson  <jamesr@chromium.org>

        [chromium] Remove unused WebLayerTreeViewClient calls
        https://bugs.webkit.org/show_bug.cgi?id=110923

        Reviewed by Adrienne Walker.

        These notifications existed for instrumentation, but now the instrumentation routes
        through WebDevToolsAgent.

        * chromium/public/WebLayerTreeViewClient.h:

2013-02-26  Dana Jansens  <danakj@chromium.org>

        Create the SharedGraphicsContext3D through its own method.
        https://bugs.webkit.org/show_bug.cgi?id=109345

        Reviewed by James Robinson.

        Add Platform API methods to get shared contexts from the embedder.

        * chromium/public/Platform.h:
        (Platform):
        (WebKit::Platform::sharedOffscreenGraphicsContext3D):
        (WebKit::Platform::sharedOffscreenGrContext):

2013-02-22  Ali Juma  <ajuma@chromium.org>

        [chromium] Register newly-created layers for animation
        https://bugs.webkit.org/show_bug.cgi?id=106594

        Reviewed by James Robinson.

        * chromium/public/WebLayerTreeView.h:
        (WebLayerTreeView):
        (WebKit::WebLayerTreeView::registerForAnimations):

2013-02-22  Chris Rogers  <crogers@google.com>
