@@ -1,3 +1,14 @@
+2013-02-27  Mark Pilgrim  <pilgrim@chromium.org>
+
+        [Chromium] Remove unused WebKitPlatformSupport class
+        https://bugs.webkit.org/show_bug.cgi?id=110982
+
+        Reviewed by Adam Barth.
+
+        Part of a larger refactoring series; see tracking bug 82948.
+
+        * chromium/public/Platform.h:
+
 2013-02-26  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r144129.
